--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.6.2
 click==8.1.3
 Flask==2.3.1
 Flask-SQLAlchemy==3.0.3
+flask-swagger-ui==4.11.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
