--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ click==8.1.3
 Flask==2.3.1
 Flask-SQLAlchemy==3.0.3
 flask-swagger-ui==4.11.1
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+packaging==23.1
+pluggy==1.0.0
+pytest==7.3.1
 python-dotenv==1.0.0
 SQLAlchemy==2.0.11
 typing_extensions==4.5.0
